Fixed the spacing of the page when there are a lot of companies returned by the search result

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -52,6 +52,7 @@ h1{
     position: relative;
     margin-left: 20px;
     top: 90px;
+    padding-bottom: 100px;
 }
 
 .numberOfDR{
@@ -77,6 +78,10 @@ h1{
     border-color:#194A09;
     position: relative;
     left: 20px;
+}
+
+#bottomOfPageSpace{
+    color: white;
 }
 
 
